# sm

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
components/sm-file-select/: Cargo.toml
components/sm-file-select/src/: complete.rs  main.rs  suggest.rs
crates/filepath-complete/: Cargo.toml
crates/filepath-complete/examples/: pick_file.rs
crates/filepath-complete/src/: complete.rs  lcp.rs  lib.rs  listdir.rs  suggest.rs
crates/sm/: Cargo.toml
crates/sm-file-select/: Cargo.toml
crates/sm-file-select/src/: lcp.rs  lib.rs  suggest.rs
crates/sm/src/: ask.rs  main.rs
crates/sm/src/cmds/: config.rs  connect.rs  mod.rs
crates/sm/src/config/: auth.rs  connect.rs  file.rs  mod.rs
src/: ask.rs  cmds.rs  config.rs  main.rs
src/cmds/: config.rs  connect.rs  mod.rs
src/config/: auth.rs  connect.rs  file.rs  mod.rs
test-server/: docker-compose.yml
test-server/sm/: config.toml
