[package]
edition = "2021"
name    = "sm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow    = "1.0"
clap      = { version = "3.1.8", features = ["derive"] }
dirs      = "4.0.0"
inquire   = "0.2.1"
log       = "0.4.16"
serde     = { version = "1.0.136", features = ["derive"] }
simplelog = "0.11.2"
toml      = "0.5.8"
