[package]
edition = "2021"
name    = "sm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow    = "1.0"
clap      = { version = "3.1.8", features = ["derive"] }
comfy-table = "6.0.0"
dirs      = "4.0.0"
inquire   = "0.6"
log       = "0.4.16"
serde     = { version = "1.0.136", features = ["derive"] }
simplelog = "0.11.2"
toml      = "0.5.8"
filepath-complete = { path="../filepath-complete"}
